--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,5 @@
-*~
-*.snakemake/
-builds
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+extra
+debug
+nohup.out
+.snakemake
+snakemake_log.txt
